--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app-wraper {
-  margin: 0px auto;
+  margin: 0 auto;
   display: grid;
  width: 1200px;
   grid-template-rows: 60px 1fr;
@@ -8,25 +8,7 @@
   grid-template-areas: "h h" "n c";
 
 }
-.heder{
-grid-area: h;
-  background: blue;
 
-}
-.heder img {
-  width: 150px;
-}
-.content {
-  grid-area: c;
-  background: green;
-}
-.content img {
-
-}
-.nav{
-  grid-area: n;
-  background: red;
-}
 
 
 
