--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,11 @@
   grid-template-areas: "h h" "n c";
 
 }
+/*головна сторінка контенту*/
 .app-waper-content{
     grid-area: c;
     background: blue;
+    padding: 5px;
 }
 
 
