--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -5,9 +5,8 @@
 
 .item {
     background: cornflowerblue;
-    text-align: right;
+    text-align: center;
     padding: 5px;
+
 }
-.buttontAddPost{
-    text-align: left;
-}
+
